--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,39 @@
 .App {
   text-align: center;
+  padding: 20px;
+}
+
+.App .toast {
+  position: fixed;
+  left: 50%;
+  top: 26px;
+  transform: translateX(-50%);
+  padding: 10px 20px;
+  border-radius: var(--borderRadius);
+  color: white;
+  z-index: 1;
+}
+
+.App .toast.error {
+  border: 2px solid var(--colorErrorBorder);
+  background: var(--colorError);
+}
+
+.App .toast.info {
+  border: 2px solid var(--colorCtaBorder);
+  background: var(--colorCta);
+}
+
+.App input {
+  font-size: 20px;
+  padding: 20px;
+  width: 100%;
+  border-radius: 3px;
+  box-shadow: 3px 3px 5px 3px rgba(77, 0, 0, 0.5);
+  border: 3px solid #1e1e1e;
+  background: #2e2e2e;
+  font-weight: bold;
+  color: white;
 }
 
 .App-logo {
