--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   transform: translateX(-50%);
   padding: 10px 20px;
   border-radius: var(--borderRadius);
-  color: white;
+  color: var(--lightTextColor);
   z-index: 1;
 }
 
@@ -56,11 +56,41 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .noresults {
+  padding: 20px;
+}
+
+.App .movies {
+  box-shadow: 3px 3px 5px 3px rgba(77, 0, 0, 0.5);
+  background: #2e2e2e;
+  border-radius: 3px;
+}
+
+.App .movie {
+  display: flex;
+  align-items: center;
+  color: var(--lightTextColor);
+  border-bottom: 3px solid #1e1e1e;
+  padding-right: 20px;
+}
+
+.App .movie .info {
+  flex: 1;
+}
+.App .movie .poster {
+  width: 100px;
+  margin-right: 20px;
+}
+
+.App .movie .title {
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 1.15em;
+}
+.App .movie .metadata {
+  display: flex;
+  flex-direction: column;
+  color: #848484;
+  font-size: 14px;
+  margin-top: 30px;
 }
