--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@
   transform: translateX(-50%);
   padding: 10px 20px;
   border-radius: var(--borderRadius);
-  color: var(--lightTextColor);
   z-index: 1;
 }
 
@@ -28,10 +27,10 @@
   font-size: 20px;
   padding: 20px;
   width: 100%;
-  border-radius: 3px;
+  border-radius: var(--borderRadius);
   box-shadow: 3px 3px 5px 3px rgba(77, 0, 0, 0.5);
   border: 3px solid #1e1e1e;
-  background: #2e2e2e;
+  background: var(--panelBackground);
   font-weight: bold;
   color: white;
 }
@@ -62,6 +61,36 @@
 
 .App .movies {
   box-shadow: 3px 3px 5px 3px rgba(77, 0, 0, 0.5);
-  background: #2e2e2e;
+  background: var(--panelBackground);
   border-radius: 3px;
+  overflow: hidden;
+}
+
+.App .save-search {
+  box-shadow: 3px 3px 5px 3px rgba(77, 0, 0, 0.5);
+  border: 3px solid #1e1e1e;
+  background: var(--panelBackground);
+  border-radius: var(--borderRadius);
+  padding: 8px 10px 10px 10px;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.App .save-search .header {
+  font-size: 10px;
+}
+.App .save-search .body {
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+.App .save-search .body svg {
+  width: 16px;
+  margin-right: 5px;
+}
+
+.App .heart.saved path {
+  fill: red;
 }
