--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: var(--defaultFont);
-  color: var(--titleColor);
+  color: var(--lightTextColor);
   text-rendering: optimizeLegibility;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
@@ -22,6 +22,7 @@ body {
   --colorSecondary: #f5f8fb;
   --colorSecondaryBorder: #e2e7ea;
   --lightTextColor: #e7e7e7;
+  --panelBackground: #33383d;
 
   /* FONTS */
   --titleFont: 'Helvetica', serif;
@@ -54,4 +55,17 @@ h4,
 h5,
 h6 {
   font-family: var(--titleFont);
+}
+
+.spin {
+  animation: spin 2s infinite linear;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
